--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bulma": "^0.8.1",
     "core-js": "^3.6.4",
+    "mapbox-gl": "^1.9.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
