--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mapbox-gl": "^1.9.0",
+    "sqlite3": "^4.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
