Database update, API calls, loaded data into the frontEnd

--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.11.0",
     "bulma": "^0.8.1",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jquery": "^3.5.0",
     "mapbox-gl": "^1.9.0",
+    "popper.js": "^1.16.1",
     "sqlite3": "^4.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
