--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.11.0",
     "bulma": "^0.8.1",
+    "bulma-calendar": "^6.0.7",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
