--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.0",
     "jquery": "^3.5.0",
     "mapbox-gl": "^1.9.0",
+    "moment": "^2.24.0",
     "popper.js": "^1.16.1",
     "sqlite3": "^4.1.1",
     "vue": "^2.6.11",
