--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "api": "nodemon api/server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.656.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.11.0",
@@ -21,9 +22,13 @@
     "jquery": "^3.5.0",
     "mapbox-gl": "^1.9.0",
     "popper.js": "^1.16.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "sqlite3": "^4.1.1",
+    "uws": "^10.148.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vue-socket.io": "^3.0.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
