Registration almost done.. kinda

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.656.0",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.11.0",
@@ -26,7 +27,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "sqlite3": "^4.1.1",
-    "uws": "^10.148.1",
+    "uws": "^10.148.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vue-socket.io": "^3.0.7"
